# Hardware_Processing_Lab_Oscillo-Waveform_Generators

./: HTProcesses.ipynb  README.md  RIGOL_data_acquisition.ipynb  pyproject.toml
LM741/: lm741.ipynb
Rigol/: DS1104ZPLUS.py  RIGOL.py  __init__.py
lab/: HTProcesses.ipynb  RIGOL_data_acquisition.ipynb
rigol_instruments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
saves/: sine_measurement.csv
